syntax = "proto3";

package pdf_creator;

service PdfCreatorService {
  rpc CreatePdf (Params) returns (Results) {}
}

message Params {
    // Name of the tamplate in bucket
    string template = 1;
    Body body = 2;
}

message Results {
  string base64 = 1;
}

// Example body
message Body {
  int64 amount = 1;
  string identity = 2;
  string name = 3;
}



